# ToM-protocol

./: .env.example  .gitbook.yaml  .gitignore  AUDIT_INDEX.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RECOMMENDATIONS.md  SECURITY_FINDINGS.md  article-ToM protocol.md  biome.json  llms.txt  medium-article-v2.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: ISSUE_BACKLOG.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  micro_task.yml  (+1 more)
.husky/: pre-commit  pre-push
crates/tom-base/: Cargo.toml
crates/tom-base/src/: endpoint_addr.rs  key.rs  lib.rs
crates/tom-connect/: Cargo.toml
crates/tom-connect/src/: address_lookup.rs  defaults.rs  dns.rs  endpoint.rs  lib.rs  metrics.rs  net_report.rs  protocol.rs  socket.rs  tls.rs  util.rs
crates/tom-connect/src/address_lookup/: dns.rs  mdns.rs  memory.rs  pkarr.rs
crates/tom-connect/src/address_lookup/pkarr/: dht.rs
crates/tom-connect/src/endpoint/: connection.rs  hooks.rs  presets.rs  quic.rs
crates/tom-connect/src/net_report/: defaults.rs  metrics.rs  probes.rs  report.rs  reportgen.rs
crates/tom-connect/src/socket/: mapped_addrs.rs  metrics.rs  remote_map.rs  transports.rs
crates/tom-connect/src/socket/remote_map/: remote_state.rs
crates/tom-connect/src/socket/remote_map/remote_state/: path_state.rs  remote_info.rs
crates/tom-connect/src/socket/transports/: ip.rs  relay.rs
crates/tom-connect/src/socket/transports/relay/: actor.rs
crates/tom-connect/src/test_utils/: mod.rs  qlog.rs
crates/tom-connect/src/tls/: name.rs  resolver.rs  verifier.rs
crates/tom-dht/: Cargo.toml
crates/tom-dht/src/: lib.rs
crates/tom-gateway/: Cargo.toml
crates/tom-gateway/src/: freebox.rs  main.rs  nat.rs  token.rs
crates/tom-gossip/: Cargo.toml
crates/tom-gossip/src/: api.rs  lib.rs  metrics.rs  net.rs
crates/tom-gossip/src/net/: address_lookup.rs  util.rs
crates/tom-gossip/src/proto/: plumtree.rs  state.rs
crates/tom-integration-tests/: Cargo.toml
crates/tom-integration-tests/tests/: cross_machine.rs  multi_node.rs  peer_present_auto_discovery.rs
crates/tom-protocol/: Cargo.toml
crates/tom-protocol-ffi/: Cargo.toml
crates/tom-protocol-ffi/include/: tom_protocol_ffi.h
crates/tom-protocol-ffi/src/: lib.rs  types.rs
crates/tom-protocol/src/: crypto.rs  envelope.rs  error.rs  lib.rs  relay.rs  router.rs  tracker.rs  types.rs
crates/tom-protocol/src/backup/: coordinator.rs  mod.rs  store.rs  types.rs
crates/tom-protocol/src/discovery/: heartbeat.rs  mod.rs  role_sync.rs  subnet.rs  types.rs
crates/tom-protocol/src/group/: election.rs  hub.rs  manager.rs  mod.rs  types.rs
crates/tom-protocol/src/roles/: antispam.rs  manager.rs  metrics.rs  mod.rs  scoring.rs
crates/tom-protocol/src/runtime/: effect.rs  executor.rs  loop.rs  metrics.rs  mod.rs  state.rs  transport.rs
crates/tom-protocol/src/storage/: mod.rs  schema.rs
crates/tom-protocol/tests/: backup_integration.rs  crypto_proptest.rs  dht_e2e.rs  discovery_integration.rs  e2e_routing.rs  envelope_proptest.rs  group_integration.rs  role_propagation.rs  roles_integration.rs  runtime_integration.rs  signature_proptest.rs
crates/tom-relay/: Cargo.toml
crates/tom-relay-ffi/: Cargo.toml
crates/tom-relay-ffi/src/: lib.rs
crates/tom-relay/src/: client.rs  defaults.rs  dns.rs  endpoint_info.rs  http.rs  key_cache.rs  lib.rs  main.rs  protos.rs  quic.rs  relay_map.rs  server.rs
crates/tom-relay/src/client/: conn.rs
crates/tom-relay/src/protos/: common.rs  handshake.rs  relay.rs
crates/tom-relay/src/server/: client.rs  clients.rs  http_server.rs  streams.rs
crates/tom-stress/: Cargo.toml
crates/tom-stress/scripts/: analyze-stress.py  campaign.sh  test-localhost.sh
crates/tom-stress/src/: burst.rs  campaign.rs  common.rs  events.rs  fanout.rs  ladder.rs  listen.rs  main.rs  output.rs  ping.rs  responder.rs  scenario_backup.rs  scenario_chaos.rs  scenario_common.rs  scenario_e2e.rs  scenario_failover.rs  scenario_group.rs  scenario_roles.rs  scenario_runner.rs
crates/tom-transport/: Cargo.toml
crates/tom-transport/src/: config.rs  connection.rs  envelope.rs  error.rs  lib.rs  node.rs  path.rs  protocol.rs
crates/tom-transport/tests/: localhost.rs
crates/tom-tui/: Cargo.toml
crates/tom-tui/src/: main.rs
deploy/: tom-relay.service
docs/: AUDIT-2026-02-19.md  Brief Infrastructure Option C for GPT 5.3 CODEX.md  CI-RETEX-LOCALHOST-TESTS-2026-02-27.md  FORK-GOVERNANCE.md  INFRA-LOCAL-DEPLOYMENT-GUIDE.md  RECAP-DEV-2026-03-05.md  REPORT-R14-TRANSITION-KEYS-2026-03-04.md  REVIEW-PEER-DISCOVERY-2026-03-07.md  REVIEW-PEER-DISCOVERY-V2-2026-03-07.md  REVIEW-PEER-DISCOVERY-V3-2026-03-07.md  REVIEW-R7.3-FORK-COPILOT.md  REVIEW-R7.3-FORK.md  TEST-STRATEGY-2026-03-05.md  TOM-TVOS-NODE-PLAN.md  article-ToM protocol-en.html  article-ToM protocol-en.md  article-ToM protocol-fr.html  design-runtime-state.md  freebox-bug-report-arp-wifi-vm.md  ios_vscode_claude_workflow_v4.md  medium-article-poc.md  medium-article.md  rapport-diagnostic-ssh-wan-2026-03-02.md  relay-discovery.md  tom-whitepaper-v1.md
experiments/iroh-poc/: Cargo.toml  FORK-ARCHITECTURE.md  README.md  V2-TEST-CAMPAIGN.md
experiments/iroh-poc/results/: 00-baseline-home-wifi.jsonl  01-commute-fr-ch-_en_suisse_Salt_operator_part2:2.jsonl  01-commute-fr-ch3_ecole.jsonl  01-commute-fr-ch_en_france_jusqua_la_frontiere_freemobile_operator_part1:2.jsonl
experiments/iroh-poc/scripts/: analyze-results.py  test-localhost.sh
experiments/iroh-poc/src/: chat_node.rs  echo_server.rs  gossip_node.rs  main.rs  nat_test.rs  node.rs
results/: 4g-car-continuous.jsonl  4g-retour-2.jsonl  4g-retour.jsonl  CAMPAIGN-REPORT.md  terminal result - 16.02. #1.md
scripts/: apple-tv-preflight.sh  build-apple-tv-relay-ffi.sh  build-apple-tv-relay.sh  build-tom-protocol-ffi-tvos.sh  car-test.sh  install-mac-air-relay.sh  prepare-usb-mac-air-relay.sh  publish-issues.sh  run-observability-smoke-local.sh  smoke-observability.sh  start-demo.sh  tests-added-log.md  uninstall-mac-air-relay.sh
(+403 files in other folders)
