[workspace]
members = ["crates/tom-transport", "crates/tom-protocol", "crates/tom-stress", "crates/tom-tui", "crates/tom-dht", "crates/tom-connect", "crates/tom-relay", "crates/tom-gossip", "crates/tom-metrics", "crates/tom-base", "crates/tom-quinn", "crates/tom-quinn-proto"]
exclude = ["experiments/iroh-poc", "crates/tom-quinn-udp"]
resolver = "2"
