[package]
name = "tom-base"
version = "0.1.0"
edition = "2024"
description = "Cryptographic base types for the ToM protocol stack — forked from iroh-base 0.96"
license = "MIT"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "tom_base_docsrs"]

[features]
default = ["relay"]
key = [
    "dep:curve25519-dalek",
    "dep:ed25519-dalek",
    "dep:url",
    "dep:derive_more",
    "dep:data-encoding",
    "dep:rand_core",
    "dep:zeroize",
    "dep:zeroize_derive",
    "relay",
]
relay = [
    "dep:url",
    "dep:derive_more",
]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
n0-error = "0.1"
curve25519-dalek = { version = "=5.0.0-pre.1", features = ["serde", "rand_core", "zeroize"], optional = true }
ed25519-dalek = { version = "=3.0.0-pre.1", features = ["serde", "rand_core", "zeroize"], optional = true }
data-encoding = { version = "2.3.3", optional = true }
rand_core = { version = "0.9.3", optional = true }
zeroize = { version = "1.8", features = ["derive"], optional = true }
zeroize_derive = { version = "1.4", optional = true }
url = { version = "2.5", features = ["serde"], optional = true }
derive_more = { version = "2.0", features = ["display"], optional = true }

[dev-dependencies]
postcard = { version = "1", features = ["use-std"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"

[lints.clippy]
unused-async = "warn"

[lints.rust]
missing_debug_implementations = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(tom_base_docsrs)"]
