[package]
name = "tom-connect"
version = "0.1.0"
edition = "2024"
description = "ToM transport layer — forked from iroh 0.96"
license = "MIT"
rust-version = "1.89"

[dependencies]
# Core QUIC (using iroh-quinn fork for compatibility)
quinn = { package = "iroh-quinn", version = "0.16", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
quinn-proto = { package = "iroh-quinn-proto", version = "0.15" }
quinn-udp = { package = "iroh-quinn-udp", version = "0.8" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki = { package = "rustls-webpki", version = "0.103", features = ["ring"] }
webpki_types = { package = "rustls-pki-types", version = "1.12" }
webpki-roots = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
pin-project = "1"
sync_wrapper = { version = "1.0", features = ["futures"] }

# tom-base (shared types: EndpointId, RelayUrl, SecretKey)
tom-base = { path = "../tom-base", features = ["key"] }
tom-relay = { path = "../tom-relay", default-features = false }
tom-metrics = { path = "../tom-metrics" }

# n0 utilities
n0-future = "0.3"
n0-error = "0.1"
n0-watcher = "0.6"

# Network utilities
netwatch = "0.14"
netdev = "0.40"
portmapper = { version = "0.13", default-features = false }
igd-next = { version = "0.16", features = ["aio_tokio"] }
hickory-resolver = "0.25"

# Discovery
pkarr = { version = "5", default-features = false, features = ["relays"] }

# Crypto
ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core", "zeroize", "pkcs8", "pem"] }
pkcs8 = "0.11.0-rc.9"

# Data structures
bytes = "1.7"
smallvec = "1.11"
papaya = { version = "0.2", default-features = false }
rustc-hash = "2"

# Utilities
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"
derive_more = { version = "2.0", features = ["debug", "display", "from", "try_into", "deref", "from_str", "into_iterator"] }
strum = { version = "0.27", features = ["derive"] }
data-encoding = "2.2"
rand = "0.9"
http = "1"
url = { version = "2.5", features = ["serde"] }
backon = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
postcard = { version = "1", default-features = false, features = ["alloc", "use-std"] }
pretty_assertions = "1"
rand_chacha = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "test-util"] }
tom-relay = { path = "../tom-relay", features = ["server"] }

[features]
default = []
metrics = ["tom-relay/metrics", "portmapper/metrics"]
test-utils = ["tom-relay/server"]
address-lookup-pkarr-dht = []
address-lookup-mdns = []
qlog = []
