[package]
name = "tom-gateway"
version = "0.1.0"
edition = "2021"
description = "CLI to auto-configure a Freebox router for the ToM protocol relay"
license = "MIT"

[[bin]]
name = "tom-gateway"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
