[package]
name = "tom-gossip"
version = "0.1.0"
edition = "2024"
description = "Gossip broadcast over HyParView/PlumTree — forked from iroh-gossip 0.96"
license = "MIT"
rust-version = "1.89"

[features]
default = ["net", "metrics"]
net = [
    "dep:irpc",
    "dep:tom-connect",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures-lite",
    "dep:futures-util",
    "dep:futures-concurrency",
]
metrics = []
test-utils = ["dep:rand_chacha", "dep:humantime-serde"]

[dependencies]
# Transport (REPLACES iroh)
tom-connect = { path = "../tom-connect", optional = true }

# iroh ecosystem (shared types)
iroh-base = { version = "0.96", default-features = false, features = ["key"] }
tom-metrics = { path = "../tom-metrics" }

# RPC
irpc = { version = "0.12.0", features = ["derive", "stream", "spans"], optional = true, default-features = false }

# Protocol
blake3 = "1.8"
bytes = { version = "1.7", features = ["serde"] }
data-encoding = "2.6.0"
derive_more = { version = "2.0.1", features = ["add", "debug", "deref", "display", "from", "try_into", "into"] }
ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
indexmap = "2.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
rand = { version = "0.9.2", features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

# Async (optional, for net feature)
n0-future = "0.3"
n0-error = { version = "0.1", features = ["anyhow"] }
tokio = { version = "1", features = ["io-util", "sync"], optional = true }
tokio-util = { version = "0.7.12", features = ["codec"], optional = true }
futures-lite = { version = "2.3", optional = true }
futures-util = { version = "0.3.30", optional = true }
futures-concurrency = { version = "7.6.1", optional = true }

# Test utilities (optional)
rand_chacha = { version = "0.9", optional = true }
humantime-serde = { version = "1.1.1", optional = true }

[dev-dependencies]
humantime-serde = "1.1.1"
n0-tracing-test = "0.3"
rand_chacha = "0.9"
serde-byte-array = "0.1.2"
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "net", "fs"] }

[lints.clippy]
unused-async = "warn"

[lints.rust]
missing_debug_implementations = "warn"
