[package]
name = "tom-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tom-protocol = { path = "../tom-protocol" }
tom-transport = { path = "../tom-transport" }
tom-relay = { path = "../tom-relay", features = ["server"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
