[package]
name = "tom-protocol-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
tom-protocol = { path = "../tom-protocol" }
tom-transport = { path = "../tom-transport" }
tom-connect = { path = "../tom-connect" }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

# Target-specific settings for tvOS
[target.'cfg(target_os = "tvos")'.dependencies]
# None needed (all deps are cross-platform)
