[package]
name = "tom-protocol-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
tom-protocol = { path = "../tom-protocol" }
tom-transport = { path = "../tom-transport" }
tom-connect = { path = "../tom-connect" }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

# netdev 0.40.1 bug: code gated by cfg(target_vendor="apple", !macos)
# but block2/dispatch2/objc2 deps only listed for target_os="ios"
# Local patch adds tvOS to all Apple-mobile cfg gates
# netdev/netwatch tvOS bug: cfg gates use target_os="ios" but tvOS is "tvos"
# Local patches add tvOS to all Apple-mobile cfg gates
[patch.crates-io]
netdev = { path = "../../patches/netdev-0.40.1" }
netwatch = { path = "../../patches/netwatch-0.14.0" }
portmapper = { path = "../../patches/portmapper-0.13.0" }
