[package]
name = "tom-protocol"
version = "0.1.0"
edition = "2021"
description = "ToM Protocol layer — routing, encryption, discovery on top of tom-transport"

[dependencies]
tom-transport = { path = "../tom-transport" }
tom-dht = { path = "../tom-dht" }  # Phase R7.1: DHT discovery
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

# Crypto (Story 1.2 + 1.3)
chacha20poly1305 = { version = "0.10", features = ["std"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
sha2 = "0.10"
hkdf = "0.12"
ed25519-dalek = "2"

# Runtime (Phase 2)
tokio = { version = "1", features = ["sync", "time", "rt"] }
async-trait = "0.1"

# Gossip discovery (Phase 3)
iroh = "0.96"  # Staying on 0.96.0 until 0.97/1.0-rc (digest conflict with mainline 6.1)
iroh-gossip = "0.96"
bytes = "1"
n0-future = "0.1"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
iroh = "0.96"
rand = "0.9"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
