[package]
name = "tom-relay"
version = "0.1.0"
edition = "2024"
description = "ToM relay server — forked from iroh-relay 0.96"
license = "MIT"
rust-version = "1.89"

[dependencies]
bytes = "1.7"
derive_more = { version = "2.0", features = ["debug", "display", "from", "try_into", "deref"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = "0.1"
iroh-base = { version = "0.96.0", default-features = false, features = ["key", "relay"] }
iroh-metrics = { version = "0.38", default-features = false }
n0-future = "0.3"
num_enum = "0.7"
pin-project = "1"
pkarr = { version = "5", default-features = false, features = ["signed_packet"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = { package = "iroh-quinn", version = "0.16", default-features = false, features = ["rustls-ring"] }
quinn-proto = { package = "iroh-quinn-proto", version = "0.15" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "sync", "rt", "net", "fs", "io-std", "signal", "process"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "codec", "rt"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
webpki-roots = "1.0"
webpki_types = { package = "rustls-pki-types", version = "1.12" }
data-encoding = "2.6"
lru = "0.16"
z32 = "1.0"
n0-error = "0.1"
blake3 = "1.8"
serde_bytes = "0.11"
hickory-resolver = { version = "0.25", features = ["tokio", "https-ring"] }
tokio-websockets = { version = "0.12", features = ["rustls-bring-your-own-connector", "ring", "getrandom", "rand", "client", "server"] }

# Server feature dependencies
clap = { version = "4", features = ["derive"], optional = true }
dashmap = { version = "6.1", optional = true }
ahash = { version = "0.8.11", optional = true }
rcgen = { version = "0.14", optional = true }
reloadable-state = { version = "0.1", optional = true }
rustls-cert-reloadable-resolver = { version = "0.7", optional = true }
rustls-cert-file-reader = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }
tokio-rustls-acme = { version = "0.9", optional = true }
simdutf8 = { version = "0.1", optional = true }
sha1 = { version = "0.11.0-rc.2", optional = true }
toml = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
proptest = "1.2"
rand_chacha = "0.9"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[build-dependencies]
cfg_aliases = "0.2"
vergen-gitcl = "1.0"

[features]
default = ["metrics"]
server = [
    "metrics",
    "dep:clap",
    "dep:dashmap",
    "dep:ahash",
    "dep:rcgen",
    "dep:reloadable-state",
    "dep:rustls-cert-file-reader",
    "dep:rustls-cert-reloadable-resolver",
    "dep:time",
    "dep:tokio-rustls-acme",
    "dep:simdutf8",
    "dep:sha1",
    "dep:toml",
    "dep:serde_json",
    "dep:tracing-subscriber",
    "quinn/platform-verifier",
    "quinn/runtime-tokio",
    "iroh-metrics/service",
]
metrics = ["iroh-metrics/metrics"]
test-utils = []

[[bin]]
name = "tom-relay"
path = "src/main.rs"
required-features = ["server"]
