[package]
name = "tom-stress"
version = "0.1.0"
edition = "2021"
description = "Stress test binary for the ToM transport layer"
license = "MIT"

[[bin]]
name = "tom-stress"
path = "src/main.rs"

[dependencies]
tom-transport = { path = "../tom-transport" }
tom-protocol = { path = "../tom-protocol" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
