[package]
name = "tom-transport"
version = "0.1.0"
edition = "2021"
description = "ToM Protocol transport layer — QUIC connectivity with hole punching"
license = "MIT"

[dependencies]
tom-connect = { path = "../tom-connect" }
tom-gossip = { path = "../tom-gossip" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
n0-future = "0.3"
n0-watcher = "0.6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "test-util"] }
