[package]
name = "tom-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tom-chat"
path = "src/main.rs"

[dependencies]
tom-transport = { path = "../tom-transport" }
tom-protocol = { path = "../tom-protocol" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
