[package]
name = "tom-iroh-poc"
version = "0.1.0"
edition = "2024"
description = "ToM Protocol - iroh PoC for NAT traversal & hole punching"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "echo-server"
path = "src/echo_server.rs"

[[bin]]
name = "gossip-node"
path = "src/gossip_node.rs"

[dependencies]
iroh = "0.96"
iroh-gossip = "0.96"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
n0-future = "0.1"
